--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "turbo": "^1.10.14"
   },
   "engines": {
-    "node": "^20.13.1",
-    "pnpm": "~8.15.6"
+    "node": ">=20.13.1",
+    "pnpm": ">=8.15.6"
   },
   "packageManager": "pnpm@8.15.6",
   "pnpm": {
